syntax = "proto3";

package user_service_v1;

option go_package = "github.com/MovingTowardsADream/SneakerStore-UserService/pkg/user_service_v1";

service Auth {
  rpc SignIn (SignInRequest) returns (SignInResponse);
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
}

message SignInRequest {
  string phone = 1;
  string email = 2;
  string password = 3;
}

message SignInResponse {
  int64 user_id = 1;
}

message SignUpRequest {
  string mail = 1;
  string password = 2;
}

message SignUpResponse {
  string token = 1;
}

service UserInfo {

}