syntax = "proto3";

package user_service;

option go_package = "user_service.v1;user_service_v1";

import "google/protobuf/timestamp.proto";

service Auth {
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
  rpc SignIn (SignInRequest) returns (SignInResponse);
}

message SignUpRequest {
  string first_name = 1;
  string last_name = 2;
  string phone = 3;
  string email = 4;
  string password = 5;
}

message SignUpResponse {
  int64 user_id = 1;
}

message SignInRequest {
  string phone = 1;
  string password = 2;
}

message SignInResponse {
  string token = 1;
}

service UserProfile {
  rpc ProfileInfo (ProfileInfoRequest) returns (ProfileInfoResponse);
}

message Address {
  string country = 1;
  string city = 2;
  string street = 3;
  string house = 4;
  string apartment = 5;
}

enum Sex {
  Other = 0;
  Male = 1;
  Female = 2;
}

message ProfileInfoRequest {
  Sex sex = 1;
  google.protobuf.Timestamp birth_date = 2;
  int32 shoes_size = 3;
  Address address = 4;
}

message ProfileInfoResponse {
  string response = 1;
}